# monitoring-price-ozon

./: .gitignore  pyproject.toml  requirements.txt
src/ozon_bot/: main.py
src/ozon_bot/configs/: config_db.py
src/ozon_bot/db/: crud.py  data_base.py  init_db.py
src/ozon_bot/handlers/: start.py
src/ozon_bot/tests/tests_configs/: test_db_config.py
